[package]
name = "did"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
dir = "0.1.2"
inquire = { version = "0.7.0", features = ["date", "editor"] }
serde = { version = "1.0.197", features = ["derive"] }
